--- a/provision.yml
+++ b/provision.yml
@@ -13,6 +13,15 @@
     - name: Create directory for app
       file: path={{ install_root }}/{{ project_name }} state=directory
    
+    - name: Create directory for php
+      file: path=/var/www/html/php state=directory
+    
+    
+    - name: copy index.php file 
+      template: src=files/index.php dest=/var/www/html/php/index.php
+    
+    
+    
     - name : install php
       apt: name={{ item }} update_cache=yes state=latest
       with_item:
@@ -23,6 +32,8 @@
         - php-json
         - php-mcrypt
         - php-sqlite
+    
+    
     - name: ensure php-fpm cgi.fix_pathinfo=0
       lineinfile: dest=/etc/php/fpm/php.ini regexp='^(.*)cgi.fix_pathinfo=' line=cgi.fix_pathinfo=0
       notify:
